--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.5.0",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.511.0",
 		"mongodb": "^6.16.0"
 	},
 	"devDependencies": {
