--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "cloudinary": "^2.6.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -33,7 +35,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
-    "vite": "^6.3.5"
+    "tailwindcss": "^4.1.7"
   }
 }
